--- a/Caddy/ReadMe
+++ b/Caddy/ReadMe
@@ -1,6 +1,6 @@
 our R UI code is generating public URLs for each page that is displayed.  Caddy is used in conjunction with DNS to make those URLs visible.
 
-Caddy is used as a reverse proxy to map pgbwb.com URLs to running services inside our network.  Much more about this at https://caddyserver.com/.  Chatbots ala ChatGPT are a great help explanining what's going on and getting it set up.
+Caddy is used as a reverse proxy to map pgbwb.com and birdomatic.com URLs to running services inside our network.  Much more about this at https://caddyserver.com/.  Chatbots ala ChatGPT are a great help explanining what's going on and getting it set up.
 
 We use DNS to point pgbwb URLs to our network.  Caddy maps what IP address and port those requests should be routed to once they get here.  
 For example: 
