--- a/Caddy/ReadMe
+++ b/Caddy/ReadMe
@@ -13,8 +13,8 @@ For example:
    test.pgwbw.com might go to IP 192.168.1.223 port 8899
    tiny.pgbwb.com might go to IP 192.168.1.224 port 8877
 
-We use our local rounter to point those URLs at the internal LAN IP address of our server to make that work 
-*inside* the network.  In our case we're using the Host Mapping function to get the traffice to the right 
+We also use our local rounter to point those URLs at the internal LAN IP address of our server to make that work 
+*inside* the network.  In our case we're using the Host Mapping function to get the traffic to the right 
 internal address.  Once again, Caddy uses the incoming URL to determine which port that traffic should use.
 
 The caddyfile is where those mapping rules are maintained.
